CI-CD/Kubenetes/echo-chat-message-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-message-service
  labels:
    app: echo-chat-message-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-chat-message-service
  template:
    metadata:
      labels:
        app: echo-chat-message-service
    spec:
      containers:
      - name: echo-chat-message-service
        image: huukhanh0653/echo-chat-message-service:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-message-service
spec:
  selector:
    app: echo-chat-message-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: LoadBalancer
