CI-CD/Kubenetes/front-end-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-front-end-service
  labels:
    app: echo-chat-front-end-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-chat-front-end-service
  template:
    metadata:
      labels:
        app: echo-chat-front-end-service
    spec:
      containers:
      - name: echo-chat-front-end-service
        image: huukhanh0653/echo-chat-front-end-service:latest
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-front-end-service
spec:
  selector:
    app: echo-chat-front-end-service
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP  # Exposes the service internally within the cluster
