CI-CD/Kubenetes/gcs-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: storage-service
  template:
    metadata:
      labels:
        app: storage-service
    spec:
      containers:
        - name: storage-service
          image: huukhanh0653/echo-chat-gcs-service:latest
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: gcp-service-account-volume
              mountPath: /var/secrets/google
              readOnly: true
      volumes:
        - name: gcp-service-account-volume
          secret:
            secretName: gcp-service-account

---

apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  selector:
    app: storage-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP  # Exposes the service externally
