CI-CD/Kubenetes/manage-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-manage-server-service
  labels:
    app: echo-chat-manage-server-service
spec:
  replicas: 0
  selector:
    matchLabels:
      app: echo-chat-manage-server-service
  template:
    metadata:
      labels:
        app: echo-chat-manage-server-service
    spec:
      containers:
      - name: echo-chat-manage-server-service
        image: huukhanh0653/echo-chat-manage-server:latest
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-manage-server-service
spec:
  selector:
    app: echo-chat-manage-server-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: CLusterIP
---
